--- a/02-TripleX/.gitignore
+++ b/02-TripleX/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/c++
-# Edit at https://www.toptal.com/developers/gitignore?templates=c++
+# Created by https://www.toptal.com/developers/gitignore/api/c++,visualstudiocode
+# Edit at https://www.toptal.com/developers/gitignore?templates=c++,visualstudiocode
 
 ### C++ ###
 # Prerequisites
@@ -35,7 +35,16 @@
 *.out
 *.app
 
-# End of https://www.toptal.com/developers/gitignore/api/c++
+### VisualStudioCode ###
+.vscode/*
+#!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
 
-# VS Code and its Extensions
-/.history/
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+
+# End of https://www.toptal.com/developers/gitignore/api/c++,visualstudiocode
