chore: found out that Unreal project folders can't start with a number
Renamed 02 to P02
Updated gitignore

--- a/P02-TripleX/.gitignore
+++ b/P02-TripleX/.gitignore
@@ -1,3 +1,4 @@
+
 # Created by https://www.toptal.com/developers/gitignore/api/c++,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=c++,visualstudiocode
 
@@ -37,14 +38,23 @@
 
 ### VisualStudioCode ###
 .vscode/*
-#!.vscode/settings.json
+!.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-*.code-workspace
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
 
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
 .history
+.ionide
+
+# Support for Project snippet scope
 
 # End of https://www.toptal.com/developers/gitignore/api/c++,visualstudiocode
